# EmiReader

./: .gitmodules  CMakeLists.txt
EmiData2PolyData/: CMakeLists.txt  EmiData2PolyData.cpp
ErtData2Mesh/: CMakeLists.txt  ErtData2Mesh.cpp
add-scalars/: CMakeLists.txt  addScalarArray.cpp
addEmiDataToMesh/: CMakeLists.txt  addEmiDataToMesh.cpp
addScalarArrayTimeSeries/: CMakeLists.txt  addScalarArrayTimeSeries.cpp
makeBuildings/: CMakeLists.txt  makeBuildings.cpp
